--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
